--- a/index.html
+++ b/index.html
@@ -15,15 +15,14 @@
 <body>
     <header>
         <div class="img-container">
-            <img src="images/logo.png" alt="John Doe" />
+            <img src="images/logo.png" alt="Egg" />
         </div>
     </header>
     <nav>
 	    <div class="topnav" id="myTopnav">
             <a href="index.html" class="active">About Me!</a>
-            <a href="registration.html">Interests and Personality</a>
-            <a href="order.html">Order Online</a>
-            <a href="features.html">Features</a>
+            <a href="interests.html">Interests and Personality</a>
+            <a href="project.html">Project Idea</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                 <i class="fa fa-bars"></i>
             </a>
@@ -54,14 +53,14 @@
               <p>I started playing league of legends in 2014 and I haven't been able to stop. It is a crippling addiction that consumes me entirely to this very day. I play adc, which is probably the most hated role and I am not nearly good enough to put my rank on here. Here is a picture of my main.</p>
             </div>
             <div class="column3">
-                <img src="images/Lucian_19.jpg" alt="Dining Room" class="img2" style="width:100%" />
+                <img src="images/Lucian_19.jpg" alt="Lucian_Pic" class="img2" style="width:100%" />
             </div>
           </div>   
     </section>
     <section id="music">
       <div class="row2">
             <div class="column3">
-              <img src="images/guitar.jpeg" alt="Dining Room" class="img2" style="width:100%" />
+              <img src="images/guitar.jpeg" alt="Guitar_Pic" class="img2" style="width:100%" />
           </div>
           <div class="column4" id="columntext1">
             <h2>Music</h2>
@@ -73,22 +72,22 @@
     <section class="menu">
         <h2>My Doggo</h2>
         <div class="gallery">
-            <a target="_blank" href="images/pizza-2.jpg">
-              <img src="images/dog1.jpeg" alt="Pizza1" width="600" height="400" />
+            <a target="_blank" href="images/dog1.jpeg">
+              <img src="images/dog1.jpeg" alt="Doggo1" width="600" height="400" />
             </a>
-            <div class="desc">This is her stuck under a table</div>
+            <div class="desc">This my doggo stuck under a table</div>
           </div>
           
           <div class="gallery">
-            <a target="_blank" href="images/pizza-4.jpg">
-              <img src="images/dog2.jpeg" alt="Pizza2" width="600" height="300" />
+            <a target="_blank" href="images/dog2.jpeg">
+              <img src="images/dog2.jpeg" alt="Doggo2" width="600" height="300" />
             </a>
             <div class="desc">This is her under the clothes rack 10 mins after a bath. (Mom was very mad)</div>
           </div>
 
           <div class="gallery">
-            <a target="_blank" href="images/pizza-5.jpg">
-              <img src="images/dog3.jpeg" alt="Pizza3" width="600" height="400" />
+            <a target="_blank" href="images/dog3.jpeg">
+              <img src="images/dog3.jpeg" alt="Doggo3" width="600" height="400" />
             </a>
             <div class="desc">And this is her doing gymnastics/sleeping</div>
           </div>
