--- a/interests.html
+++ b/interests.html
@@ -22,9 +22,8 @@
     <nav>
 	    <div class="topnav" id="myTopnav">
             <a href="index.html">About Me!</a>
-            <a href="registration.html" class="active">Interests and Personality</a>
-            <a href="order.html">Order Online</a>
-            <a href="features.html">Features</a>
+            <a href="interests.html" class="active">Interests and Personality</a>
+            <a href="project.html">Project Idea</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                 <i class="fa fa-bars"></i>
             </a>
