Minor Text Edit

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           </div>
           <div class="column4" id="columntext1">
             <h2>Music</h2>
-            <p>I have been playing guitar for about 10 years now and I would like to thing that I'm halfway decent. For about 3 of these I worked as a freelance guitarist/member in a band. I'm very much influenced by guitarists like John Mayer, Eric clapton and B.B.King. I love the blues and I currently play an American Pro 2 Fender Stratocaster. Yes, I am that guy at the concert intensly studying the band's gear while everyone else is having a good time. (I wouldn't go with me either). I have a couple of covers on my Instagram page that you can check out if that's something that interests you :) </p>
+            <p>I have been playing guitar for about 10 years now and I would like to think that I'm halfway decent. For about 3 of these I worked as a freelance guitarist/member in a band. I'm very much influenced by guitarists like John Mayer, Eric clapton and B.B.King. I love the blues and I currently play an American Pro 2 Fender Stratocaster. Yes, I am that guy at the concert intensly studying the band's gear while everyone else is having a good time. (I wouldn't go with me either). I have a couple of covers on my Instagram page that you can check out if that's something that interests you :) </p>
             <p><a href="https://www.instagram.com/p/Cfn2LjNhxJM/"  style="color: goldenrod;">Instagram</a></p>
           </div>
         </div>   
